{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 74,
  "lineage": "3f7959d7-6b4c-ec28-6b33-8103cf6561e1",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:loadbalancer/app/dev-btcmp-proj-5-public-alb/ec7a18dda96eca7c",
            "arn_suffix": "app/dev-btcmp-proj-5-public-alb/ec7a18dda96eca7c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-btcmp-proj-5-public-alb-222878651.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:419126140774:loadbalancer/app/dev-btcmp-proj-5-public-alb/ec7a18dda96eca7c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-btcmp-proj-5-public-alb",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-0e0f3f55b0ca6e6f5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ceec9ee7c181d9c"
              },
              {
                "subnet_id": "subnet-032e6c4aa0953ba77"
              }
            ],
            "subnets": [
              "subnet-02ceec9ee7c181d9c",
              "subnet-032e6c4aa0953ba77"
            ],
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-alb",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-alb",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "vpc_id": "vpc-0876d63bc596a1e4e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:loadbalancer/app/dev-btcmp-proj-5-public-alb/ec7a18dda96eca7c"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:listener/app/dev-btcmp-proj-5-public-alb/ec7a18dda96eca7c/99ff264bf982da1c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:targetgroup/dev-btcmp-proj-5-public-tg/74dd33301f59bce0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:419126140774:listener/app/dev-btcmp-proj-5-public-alb/ec7a18dda96eca7c/99ff264bf982da1c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:loadbalancer/app/dev-btcmp-proj-5-public-alb/ec7a18dda96eca7c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:listener/app/dev-btcmp-proj-5-public-alb/ec7a18dda96eca7c/99ff264bf982da1c"
          },
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:targetgroup/dev-btcmp-proj-5-public-tg/74dd33301f59bce0",
            "arn_suffix": "targetgroup/dev-btcmp-proj-5-public-tg/74dd33301f59bce0",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:419126140774:targetgroup/dev-btcmp-proj-5-public-tg/74dd33301f59bce0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:419126140774:loadbalancer/app/dev-btcmp-proj-5-public-alb/ec7a18dda96eca7c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-btcmp-proj-5-public-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-frontend-tg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-frontend-tg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:targetgroup/dev-btcmp-proj-5-public-tg/74dd33301f59bce0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097d7b646a15af6ed",
            "arn": "arn:aws:ec2:us-east-2:419126140774:elastic-ip/eipalloc-097d7b646a15af6ed",
            "domain": "vpc",
            "id": "eipalloc-097d7b646a15af6ed",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-12-126-64.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.126.64",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-bastion-eip",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-bastion-eip",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0503ed50b531cc445",
            "arn": "arn:aws:ec2:us-east-2:419126140774:instance/i-0f00c043c26c2c545",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-btcmp-proj-5-ec2-instance-profile",
            "id": "i-0f00c043c26c2c545",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2-KEY",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-058b758c220cab142"
              }
            ],
            "primary_network_interface_id": "eni-058b758c220cab142",
            "private_dns": "ip-10-0-1-93.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-18-219-152-222.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.152.222",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:419126140774:key/a9cebdf3-eb5c-4883-94d2-99644bc50e2f",
                "tags_all": {
                  "CostCenter": "btcmp-proj-5",
                  "Environment": "dev",
                  "Owner": "Vatsal",
                  "Project": "btcmp-proj-5"
                },
                "throughput": 125,
                "volume_id": "vol-0cf54533a954c9f1d",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-032e6c4aa0953ba77",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-bastion",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-bastion",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-028bb0598d0e62c95"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "i-0f00c043c26c2c545",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.bastion.data.aws_ami.ubuntu",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.security_groups.aws_security_group.bastion",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.internal_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:loadbalancer/app/dev-btcmp-proj-5-internal-alb/a5d12e7606909590",
            "arn_suffix": "app/dev-btcmp-proj-5-internal-alb/a5d12e7606909590",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-dev-btcmp-proj-5-internal-alb-1918348239.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:419126140774:loadbalancer/app/dev-btcmp-proj-5-internal-alb/a5d12e7606909590",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-btcmp-proj-5-internal-alb",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-0adf8b23f93b469a3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-090de0235700c8310"
              },
              {
                "subnet_id": "subnet-0d6bef1b5fe2bcade"
              }
            ],
            "subnets": [
              "subnet-090de0235700c8310",
              "subnet-0d6bef1b5fe2bcade"
            ],
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-alb",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-alb",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "vpc_id": "vpc-0876d63bc596a1e4e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:loadbalancer/app/dev-btcmp-proj-5-internal-alb/a5d12e7606909590"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.bastion",
            "module.security_groups.aws_security_group.frontend",
            "module.security_groups.aws_security_group.internal_alb",
            "module.vpc.aws_subnet.frontend",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.internal_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:listener/app/dev-btcmp-proj-5-internal-alb/a5d12e7606909590/2739ccfba5671403",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:targetgroup/dev-btcmp-proj-5-internal-tg/bdd340919d741c9b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:419126140774:listener/app/dev-btcmp-proj-5-internal-alb/a5d12e7606909590/2739ccfba5671403",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:loadbalancer/app/dev-btcmp-proj-5-internal-alb/a5d12e7606909590",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:listener/app/dev-btcmp-proj-5-internal-alb/a5d12e7606909590/2739ccfba5671403"
          },
          "dependencies": [
            "module.internal_alb.aws_lb.main",
            "module.internal_alb.aws_lb_target_group.main",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.bastion",
            "module.security_groups.aws_security_group.frontend",
            "module.security_groups.aws_security_group.internal_alb",
            "module.vpc.aws_subnet.frontend",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.internal_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:targetgroup/dev-btcmp-proj-5-internal-tg/bdd340919d741c9b",
            "arn_suffix": "targetgroup/dev-btcmp-proj-5-internal-tg/bdd340919d741c9b",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:419126140774:targetgroup/dev-btcmp-proj-5-internal-tg/bdd340919d741c9b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:419126140774:loadbalancer/app/dev-btcmp-proj-5-internal-alb/a5d12e7606909590"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-btcmp-proj-5-internal-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-frontend-tg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-frontend-tg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:419126140774:targetgroup/dev-btcmp-proj-5-internal-tg/bdd340919d741c9b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:security-group/sg-0e0f3f55b0ca6e6f5",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0f3f55b0ca6e6f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-btcmp-proj-5-alb-sg",
            "name_prefix": "",
            "owner_id": "419126140774",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-alb-sg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-alb-sg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "sg-0e0f3f55b0ca6e6f5",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:security-group/sg-01132d25c8108e8ab",
            "description": "Security group for Backend API servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01132d25c8108e8ab",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "API from Internal ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0adf8b23f93b469a3"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-028bb0598d0e62c95"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-btcmp-proj-5-backend-sg",
            "name_prefix": "",
            "owner_id": "419126140774",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-backend-sg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-backend-sg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "sg-01132d25c8108e8ab",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.bastion",
            "module.security_groups.aws_security_group.frontend",
            "module.security_groups.aws_security_group.internal_alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:security-group/sg-028bb0598d0e62c95",
            "description": "Security group for Bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028bb0598d0e62c95",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from allowed IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-btcmp-proj-5-bastion-sg",
            "name_prefix": "",
            "owner_id": "419126140774",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-bastion-sg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-bastion-sg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "sg-028bb0598d0e62c95",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:security-group/sg-02fe17b5e2553b04a",
            "description": "Security group for Frontend application servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02fe17b5e2553b04a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e0f3f55b0ca6e6f5"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-028bb0598d0e62c95"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-btcmp-proj-5-frontend-sg",
            "name_prefix": "",
            "owner_id": "419126140774",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-frontend-sg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-frontend-sg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "sg-02fe17b5e2553b04a",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.bastion",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:security-group/sg-0adf8b23f93b469a3",
            "description": "Security group for Internal Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adf8b23f93b469a3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from Frontend",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02fe17b5e2553b04a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-btcmp-proj-5-internal-alb-sg",
            "name_prefix": "",
            "owner_id": "419126140774",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-internal-alb-sg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-internal-alb-sg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "sg-0adf8b23f93b469a3",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.bastion",
            "module.security_groups.aws_security_group.frontend",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:security-group/sg-0a1495b8b87fbb678",
            "description": "Security group for RDS PostgreSQL database",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "No outbound traffic allowed",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1495b8b87fbb678",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from Backend",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01132d25c8108e8ab"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dev-btcmp-proj-5-rds-sg",
            "name_prefix": "",
            "owner_id": "419126140774",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-rds-sg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-rds-sg",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "sg-0a1495b8b87fbb678",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.backend",
            "module.security_groups.aws_security_group.bastion",
            "module.security_groups.aws_security_group.frontend",
            "module.security_groups.aws_security_group.internal_alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be56db65953110fe",
            "arn": "arn:aws:ec2:us-east-2:419126140774:elastic-ip/eipalloc-0be56db65953110fe",
            "association_id": "eipassoc-046deeff34be0b456",
            "domain": "vpc",
            "id": "eipalloc-0be56db65953110fe",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0ea33e1f176ad49bd",
            "private_dns": "ip-10-0-1-216.us-east-2.compute.internal",
            "private_ip": "10.0.1.216",
            "public_dns": "ec2-52-15-184-104.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.184.104",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-nat-eip-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-nat-eip-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:internet-gateway/igw-02a7bd8c7245d73c6",
            "id": "igw-02a7bd8c7245d73c6",
            "owner_id": "419126140774",
            "region": "us-east-2",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-igw",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-igw",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be56db65953110fe",
            "association_id": "eipassoc-046deeff34be0b456",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0250b04fad8aa704d",
            "network_interface_id": "eni-0ea33e1f176ad49bd",
            "private_ip": "10.0.1.216",
            "public_ip": "52.15.184.104",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-032e6c4aa0953ba77",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-nat-gw-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-nat-gw-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "backend_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04aa156303b8c60f51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0250b04fad8aa704d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-04aa156303b8c60f5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-04aa156303b8c60f5"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.backend",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b310e78b6078e31c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0250b04fad8aa704d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0b310e78b6078e31c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-0b310e78b6078e31c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.backend",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "frontend_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06910fb261245c36e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0250b04fad8aa704d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-06910fb261245c36e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-06910fb261245c36e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.frontend",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fc958616147952941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0250b04fad8aa704d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0fc95861614795294",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-0fc95861614795294"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.frontend",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02a7bd8c7245d73c6",
            "id": "r-rtb-0766410633fdf6f951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0766410633fdf6f95",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-0766410633fdf6f95"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:route-table/rtb-04aa156303b8c60f5",
            "id": "rtb-04aa156303b8c60f5",
            "owner_id": "419126140774",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0250b04fad8aa704d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-backend-rt-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "backend"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-backend-rt-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "rtb-04aa156303b8c60f5",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:route-table/rtb-0b310e78b6078e31c",
            "id": "rtb-0b310e78b6078e31c",
            "owner_id": "419126140774",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0250b04fad8aa704d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-backend-rt-2",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "backend"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-backend-rt-2",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "rtb-0b310e78b6078e31c",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:route-table/rtb-05083b618ae4ee992",
            "id": "rtb-05083b618ae4ee992",
            "owner_id": "419126140774",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-database-rt",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "database"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-database-rt",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "rtb-05083b618ae4ee992",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:route-table/rtb-06910fb261245c36e",
            "id": "rtb-06910fb261245c36e",
            "owner_id": "419126140774",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0250b04fad8aa704d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-frontend-rt-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "frontend"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-frontend-rt-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "rtb-06910fb261245c36e",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:route-table/rtb-0fc95861614795294",
            "id": "rtb-0fc95861614795294",
            "owner_id": "419126140774",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0250b04fad8aa704d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-frontend-rt-2",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "frontend"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-frontend-rt-2",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "rtb-0fc95861614795294",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:route-table/rtb-0766410633fdf6f95",
            "id": "rtb-0766410633fdf6f95",
            "owner_id": "419126140774",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a7bd8c7245d73c6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-public-rt",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "public"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-public-rt",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "rtb-0766410633fdf6f95",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c580e34582ebe50",
            "region": "us-east-2",
            "route_table_id": "rtb-04aa156303b8c60f5",
            "subnet_id": "subnet-066691bb83128a5c6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.backend",
            "module.vpc.aws_subnet.backend",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e384a0125872edaf",
            "region": "us-east-2",
            "route_table_id": "rtb-0b310e78b6078e31c",
            "subnet_id": "subnet-0c2cb52cca270c9b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.backend",
            "module.vpc.aws_subnet.backend",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0557403104359a749",
            "region": "us-east-2",
            "route_table_id": "rtb-05083b618ae4ee992",
            "subnet_id": "subnet-07c9afe3a449fa061"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021fdf34dde70e3eb",
            "region": "us-east-2",
            "route_table_id": "rtb-05083b618ae4ee992",
            "subnet_id": "subnet-051b01e3d78e96401"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f95eb5ce90b4108e",
            "region": "us-east-2",
            "route_table_id": "rtb-06910fb261245c36e",
            "subnet_id": "subnet-090de0235700c8310"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.frontend",
            "module.vpc.aws_subnet.frontend",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b8e03e3d193e2b4",
            "region": "us-east-2",
            "route_table_id": "rtb-0fc95861614795294",
            "subnet_id": "subnet-0d6bef1b5fe2bcade"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.frontend",
            "module.vpc.aws_subnet.frontend",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00eca7f4f0930f621",
            "region": "us-east-2",
            "route_table_id": "rtb-0766410633fdf6f95",
            "subnet_id": "subnet-032e6c4aa0953ba77"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b8656a8833e8e55",
            "region": "us-east-2",
            "route_table_id": "rtb-0766410633fdf6f95",
            "subnet_id": "subnet-02ceec9ee7c181d9c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:subnet/subnet-066691bb83128a5c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066691bb83128a5c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419126140774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-backend-subnet-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "backend"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-backend-subnet-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "backend"
            },
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "subnet-066691bb83128a5c6",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:subnet/subnet-0c2cb52cca270c9b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2cb52cca270c9b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419126140774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-backend-subnet-2",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "backend"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-backend-subnet-2",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "backend"
            },
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "subnet-0c2cb52cca270c9b7",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:subnet/subnet-07c9afe3a449fa061",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c9afe3a449fa061",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419126140774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-database-subnet-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "database"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-database-subnet-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "database"
            },
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "subnet-07c9afe3a449fa061",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:subnet/subnet-051b01e3d78e96401",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.32.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051b01e3d78e96401",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419126140774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-database-subnet-2",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "database"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-database-subnet-2",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "database"
            },
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "subnet-051b01e3d78e96401",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:subnet/subnet-090de0235700c8310",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090de0235700c8310",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419126140774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-frontend-subnet-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "frontend"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-frontend-subnet-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "frontend"
            },
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "subnet-090de0235700c8310",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:subnet/subnet-0d6bef1b5fe2bcade",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6bef1b5fe2bcade",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419126140774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-frontend-subnet-2",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "frontend"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-frontend-subnet-2",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "frontend"
            },
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "subnet-0d6bef1b5fe2bcade",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:subnet/subnet-032e6c4aa0953ba77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032e6c4aa0953ba77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "419126140774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-public-subnet-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "public"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-public-subnet-1",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "public"
            },
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "subnet-032e6c4aa0953ba77",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:subnet/subnet-02ceec9ee7c181d9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ceec9ee7c181d9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "419126140774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-public-subnet-2",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "public"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-public-subnet-2",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5",
              "Tier": "public"
            },
            "vpc_id": "vpc-0876d63bc596a1e4e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "subnet-02ceec9ee7c181d9c",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:419126140774:vpc/vpc-0876d63bc596a1e4e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0259e00285124dd25",
            "default_route_table_id": "rtb-0cffa8df2aca2ee98",
            "default_security_group_id": "sg-0c5d64d5eca28ef82",
            "dhcp_options_id": "dopt-0320e399c7370da34",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0876d63bc596a1e4e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cffa8df2aca2ee98",
            "owner_id": "419126140774",
            "region": "us-east-2",
            "tags": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-vpc",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            },
            "tags_all": {
              "CostCenter": "btcmp-proj-5",
              "Environment": "dev",
              "Name": "dev-btcmp-proj-5-vpc",
              "Owner": "Vatsal",
              "Project": "btcmp-proj-5"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419126140774",
            "id": "vpc-0876d63bc596a1e4e",
            "region": "us-east-2"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}